--- a/.github/workflows/Build-OnePlus-Kernel.yml
+++ b/.github/workflows/Build-OnePlus-Kernel.yml
@@ -234,6 +234,16 @@ jobs:
          sed -i "s/DKSU_VERSION=${DEFAULT_VERSION}/DKSU_VERSION=${KSU_VERSION}/" "${MAKE_FILE}"
          echo "KSUVER=${KSU_VERSION}" >> $GITHUB_ENV
 
+      - name: Handle SKSU Version
+        if: ${{ github.event.inputs.kernelsu_variant == 'SKSU' }}
+        run: |
+          cd kernel_workspace/kernel_platform
+          cd ./KernelSU
+          KSU_VERSION=$(expr $(/usr/bin/git rev-list --count main) "+" 10606)
+          echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
+          export KSU_VERSION=$KSU_VERSION
+          sed -i "s/DKSU_VERSION=12500/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
+          
       - name: Add make name
         run: |
          cd kernel_workspace/kernel_platform
